:sparkles: feat: 功能优化

--- a/font/index.template.html
+++ b/font/index.template.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./Alibaba.css" rel="stylesheet" />
-    <link href="./JetBrains.css" rel="stylesheet" />
     <link href="./JetBrainsMapleMono.css" rel="stylesheet" />
     <title>Document</title>
     <style>
       html,
       body {
-        font-family: JetBrainsMapleMono, AlibabaPuHuiTi, JetBrainsMono;
+        font-family: JetBrainsMapleMono;
       }
     </style>
   </head>
