:sparkles: feat: 功能优化

--- a/font/index.html
+++ b/font/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./JetBrainsMapleMono.css" rel="stylesheet" />
+    <link href="./MapleMono.css" rel="stylesheet" />
     <title>Document</title>
     <style>
       html,
       body {
-        font-family: JetBrainsMapleMono;
+        font-family: MapleMono;
       }
     </style>
   </head>
