--- a/src/demos/anime-1.html
+++ b/src/demos/anime-1.html
@@ -16,7 +16,7 @@
       });
     </script>
     <style>
-      .container {
+      .anime-container {
         width: 50px;
         height: 50px;
         background: red;
@@ -24,6 +24,6 @@
     </style>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="anime-container"></div>
   </body>
 </html>
